added cover photo

--- a/app/views/welcome/projects.html.erb
+++ b/app/views/welcome/projects.html.erb
@@ -1,11 +1,9 @@
 <h2>good at computers and strategy, likes to build cool stuff</h2>
-<p>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
-<p>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
-<p>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
-<p>---------------------------------------------INSERT GRAPHIC-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
-<p>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
-<p>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
-<p>----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------</p>
+
+<div class="cover_photo">
+  <%= image_tag("stars_long_banner.jpg", width: '2000px') %>
+<div>
+
 <p> What's my <%= link_to "story", welcome_processes_path %>? </p>
 <br />
 <h2>Projects</h2>
