--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <br />
-<h1>Projects</h1>
+<h1>Project Catalog</h1>
 
 <table>
 <% @projects.each do |project| %>
@@ -28,7 +28,19 @@
 
 <br />
 
-<%= link_to 'New Project', new_project_path %>
+<%= link_to 'Add New Project', new_project_path %>
+<br />
+<br />
+<br />
+<br />
+
+
+</div>
+    <a href="/">Homepage</a>
+    <br />
+        <br />
+    <a href="/processes">My Story</a>
+</div>
 
 <!-- ORIGINAL CODE BELOW -->
 <!-- <table>
