--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
+
   <head>
     <title>chrisbrickey</title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
 
-  <body class="<%= controller.controller_name %>">
+  <div class="container-fluid">
+    <body class="<%= controller.controller_name %>">
 
-    <div id="banner">
-      <%= "chrisbrickey" %>
-      <span class="title"><%= @page_title %></span>
-    </div>
+      <div id="banner">
+        <%= "chrisbrickey" %>
+        <span class="title"><%= @page_title %></span>
+      </div>
 
-    <div id="main">
-      <%= yield %>
-    </div>
+    </body>
+  </div>
 
-  </body>
+  <div id="main">
+    <%= yield %>
+  </div>
+
 </html>
