--- a/app/views/welcome/projects.html.erb
+++ b/app/views/welcome/projects.html.erb
@@ -1,41 +1,54 @@
-<h1>
-  I like to build cool stuff. Here's my <%= link_to "story", welcome_processes_path %>.
-</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </head>
 
-<div class="cover_photo">
-  <%= image_tag("stars_long_banner.jpg", width: '2000px') %>
-<div>
 
-<br />
-<br />
-<h2>My Projects</h2>
+<div class="container-fluid">
 
-<table>
-<% @projects.each do |project| %>
-  <tr class="<%= cycle('list_line_odd_for_main_page', 'list_line_even_for_main_page') %>">
+  <div class="frontpage">
+    <a id="ubertext">
+      I like to build cool stuff. Here's my<%= link_to "story.", welcome_processes_path, {:style => 'font-size: 22px; color: rgb(255, 255, 153)' } %>
+    </a>
+  </div>
 
-    <td>
-      <%= image_tag(project.image_url, class: 'list_image') %>
-    </td>
+  <br />
+  <br />
+  <h2>My Projects</h2>
 
-    <td class="list_description">
-      <dl>
-        <dt><%= project.title %></dt>
-        <dd><%= truncate(strip_tags(project.description), length: 300) %></dd>
-      </dl>
-    </td>
+  <table>
+  <% @projects.each do |project| %>
+    <tr class="<%= cycle('list_line_odd_for_main_page', 'list_line_even_for_main_page') %>">
 
-  </tr>
-<% end %>
-</table>
+      <td>
+        <%= image_tag(project.image_url, class: 'list_image') %>
+      </td>
 
-<br />
+      <td class="list_description">
+        <dl>
+          <dt><%= project.title %></dt>
+          <dd><%= truncate(strip_tags(project.description), length: 300) %></dd>
+        </dl>
+      </td>
 
-<div>
-  Links to project work coming soon. For now, check out my
-  <%= link_to "github", "https://github.com/chrisbrickey" %> and
-  <%= link_to "linkedin", "https://www.linkedin.com/in/chrisbrickey" %>.
-</div>
+    </tr>
+  <% end %>
+  </table>
 
-<br />
-<br />
+  <br />
+
+  <div>
+    Links to project work coming soon. For now, check out my
+    <%= link_to "github", "https://github.com/chrisbrickey" %> and
+    <%= link_to "linkedin", "https://www.linkedin.com/in/chrisbrickey" %>.
+  </div>
+
+  <br />
+  <br />
+
+</html>
