added warning link directing to chrisbrickey.com

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,6 +45,13 @@
    background-size:  cover;
  }
 
+ #wrong_page {
+   padding: 10px;
+   font:  Georgia, sans-serif;
+   color: rgb(255, 153, 0);
+   font-size: 22px;
+ }
+
  #ubertext {
    padding: 10px;
    font:  Georgia, sans-serif;
