--- a/app/views/welcome/projects.html.erb
+++ b/app/views/welcome/projects.html.erb
@@ -13,6 +13,8 @@
     <div class="container-fluid">
 
       <div class="frontpage">
+        <h4 id="wrong_page">This is my testing site. It's not pretty, but it helps me test new features. Go to <a href="http://www.chrisbrickey.com">chrisbrickey.com</a> to see my portfolio and personal story.</h4>
+        <br />
         <a id="ubertext">
           I like to build cool stuff. Here's my<%= link_to "story.", welcome_processes_path, {:style => 'font-size: 22px; color: rgb(255, 255, 153)' } %>
         </a>
